# MemoryMRI

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml
artifacts/: day2-summary.json  (+14 more)
backend/: pyproject.toml
backend/src/memory_mri/: __init__.py  api.py  api_models.py  benchmark_loader.py  config.py  demo.py  evaluation.py  schemas.py  statistics.py
backend/src/memory_mri/agents/: base.py  fake.py  openai_runner.py
backend/src/memory_mri/analysis/: __init__.py  engine.py  models.py  scoring.py  semantic.py
backend/src/memory_mri/cli/: analysis_tools.py  day2.py  gpt_baseline.py  main.py  openai_smoke.py  replay_tools.py  trace_tools.py
backend/src/memory_mri/db/: models.py  session.py
backend/src/memory_mri/domain/: actions.py
backend/src/memory_mri/engine/: benchmark.py  counterfactual_replay.py  day2_summary.py  gpt_baseline.py  repair_proposals.py  verification.py  verification_artifacts.py
backend/src/memory_mri/prompts/: customer_support.txt  customer_support_v1.md  devops.txt  devops_v1.md  loader.py  memory_contradiction_v1.md  memory_repair_proposal_v1.md  memory_suspicion_v1.md  workplace_expense.txt  workplace_expense_v1.md
backend/tests/: conftest.py  test_agent_input.py  test_api.py  test_benchmark.py  test_benchmark_quality.py  test_counterfactual_replay.py  test_demo.py  test_evaluation.py  test_gpt_baseline.py  test_investigation_analysis.py  test_loader.py  test_openai_runner.py  test_pairwise_replay.py  test_repair_proposals.py  test_repository.py  test_runner.py  test_schemas.py  test_statistics.py  test_verification.py
(+380 files in other folders)
