[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mri"
version = "0.1.0"
description = "Memory MRI Day 1 backend foundation"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "fastapi>=0.112,<1",
  "openai>=2.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
